Modal masih bermasalah

--- a/web/index.html
+++ b/web/index.html
@@ -23,14 +23,14 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=template/pages/index.html">
+<meta http-equiv="refresh" content="0;url=template/pages/index.jsp">
 <title>Pegadaian v1.0</title>
 <script language="javascript">
-    window.location.href = "template/pages/index.html"
+    window.location.href = "template/pages/index.jsp"
 </script>
 </head>
 <body>
-Go to <a href="template/pages/index.html">template/pages/index.html</a>
+Go to <a href="template/pages/index.jsp">template/pages/index.jsp</a>
 </body>
 </html>
 
